welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: ambiguous reference to overloaded definition,
both method isFacingTrail in class SlugSnail of type ()Boolean
and  method isFacingTrail in class SlugSnail of type ()Boolean
match argument types () and expected result type Boolean
			if (isFacingTrail()) {
                            ^SlugSnail:10: error: ambiguous reference to overloaded definition,
both method isFacingTrail in class SlugSnail of type ()Boolean
and  method isFacingTrail in class SlugSnail of type ()Boolean
match argument types () and expected result type Boolean
				if (isFacingTrail()) {
                                    ^SlugSnail:17: error: ambiguous reference to overloaded definition,
both method isFacingTrail in class SlugSnail of type ()Boolean
and  method isFacingTrail in class SlugSnail of type ()Boolean
match argument types () and expected result type Boolean
					if (isFacingTrail()) {
                                            ^SlugSnail:47: error: method isFacingTrail is defined twice
  conflicting symbols both originated in file 'plm.runtime75.SlugSnail'
def isFacingTrail():Boolean = {
    ^